--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,12 +37,12 @@ jobs:
       - run:
           name: Add .env(Functions)
           command: |
-            echo "FIREBASE_API_KEY=$FIREBASE_API_KEY" > .env
-            echo "FIREBASE_AUTH_DOMAIN=$FIREBASE_AUTH_DOMAIN" >> .env
-            echo "FIREBASE_DATABASE_URL=$FIREBASE_DATABASE_URL" >> .env
-            echo "FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID" >> .env
-            echo "FIREBASE_STORAGE_BUCKET=$FIREBASE_STORAGE_BUCKET" >> .env
-            echo "FIREBASE_MESSAGING_SENDER_ID=$FIREBASE_MESSAGING_SENDER_ID" >> .env
+            echo "FIREBASE_API_KEY=$FB_API_KEY" > .env
+            echo "FIREBASE_AUTH_DOMAIN=$FB_AUTH_DOMAIN" >> .env
+            echo "FIREBASE_DATABASE_URL=$FB_DATABASE_URL" >> .env
+            echo "FIREBASE_PROJECT_ID=$FB_PROJECTID" >> .env
+            echo "FIREBASE_STORAGE_BUCKET=$FB_STORAGE_BUCKET" >> .env
+            echo "FIREBASE_MESSAGING_SENDER_ID=$FB_MESSAGING_SENDER_ID" >> .env
 
       - save_cache:
           paths:
