--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "oideyo-machida-sagamihara-functions",
-  "description": "oi-deyo Machida and Sagamihara in JAPAN unofficial web-site",
+  "name": "functions",
+  "description": "functions",
   "author": "Sakamoto-san <skmt3p@gmail.com>",
   "scripts": {
     "lint": "eslint .",
@@ -28,7 +28,6 @@
     "feedparser": "^2.2.9",
     "firebase": "^5.5.5",
     "firebase-admin": "^6.1.0",
-    "firebase-functions": "^2.1.0",
     "fs": "^0.0.1-security",
     "glob-all": "^3.1.0",
     "htmlspecialchars": "^1.0.5",
@@ -49,6 +48,8 @@
   "devDependencies": {
     "eslint": "^4.12.0",
     "eslint-plugin-promise": "^3.6.0",
+    "firebase-tools": "^6.5.0",
+    "firebase-functions": "^2.2.1",
     "prettier": "1.14.3"
   },
   "engines": {
