--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,10 @@ jobs:
             echo "FIREBASE_PROJECT_ID=$FB_PROJECTID" >> .env
             echo "FIREBASE_STORAGE_BUCKET=$FB_STORAGE_BUCKET" >> .env
             echo "FIREBASE_MESSAGING_SENDER_ID=$FB_MESSAGING_SENDER_ID" >> .env
+            echo "TW_CONSUMER_KEY=$TW_CONSUMER_KEY" >> .env
+            echo "TW_CONSUMER_SECRET=$TW_CONSUMER_SECRET" >> .env
+            echo "TW_ACCESS_TOKEN_KEY=$TW_ACCESS_TOKEN_KEY" >> .env
+            echo "TW_ACCESS_TOKEN_SECRET=$TW_ACCESS_TOKEN_SECRET" >> .env
 
       - save_cache:
           paths:
