--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "firebase": "^5.5.5",
+    "firebase-admin": "^7.3.0",
     "fs": "^0.0.1-security",
     "glob-all": "^3.1.0",
     "htmlspecialchars": "^1.0.5",
